--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "start": "node app.js",
-    "test": "mocha --reporter nyan"
+    "test": "mocha --reporter nyan",
+    "watch-app": "stylus -w -o public/styles -c dev/styles & coffee -w -o public/scripts -c dev/scripts"
   },
   "devDependencies": {
     "chai": "^2.3.0",
